@@ -39,7 +39,7 @@ public class SilentGear implements IModBase {
     public static final String MOD_ID = "silentgear";
     public static final String MOD_NAME = "Silent Gear";
     public static final String VERSION = "0.1.2";
-    public static final String SL_VERSION = "3.0.2";
+    public static final String SL_VERSION = "3.0.3";
     public static final int BUILD_NUM = 0;
     public static final String DEPENDENCIES = "required-after:silentlib@[" + SL_VERSION + ",)";
 
