@@ -1,6 +1,7 @@
 0.1.2
 Added: Configs to control vanilla gear nerfing (to disable, remove all items from the list)
 Added: Blueprint package, an item that gives blueprints when used (pulls from a loot table)
+Changed: Root advancement no longer gives blueprints, player spawns with a blueprint package instead (#7)
 
 0.1.1
 Added: Wool and leather grips (craft leather or a block of wool with an existing tool)
